# grammers-mtproxy

./: .gitignore
docs/deepseek/: 07-fix-faketls-transport-tag.md
docs/faketls/: 01-protocol-and-architecture.md  02-root-cause-analysis.md  03-references.md  04-implementation-plan.md  05-rounds-progress-and-status.md  06-rootcause-init-record.md  07-final-resolution.md  README.md
grammers-client/: Cargo.toml
grammers-client/examples/: mtproxy.rs  mtproxy_test.rs  proxy_test.rs
grammers-crypto/src/: obfuscated.rs
grammers-mtproto/: Cargo.toml  DEPS.md
grammers-mtproto/src/: lib.rs
grammers-mtproto/src/tls/: client_hello.rs  framing.rs  mod.rs  obfuscator.rs  record.rs  server_hello.rs  stream.rs
grammers-mtproto/src/transport/: mod.rs  mtproxy.rs  randomized_intermediate.rs
grammers-mtsender/: Cargo.toml
grammers-mtsender/src/: configuration.rs  lib.rs  sender.rs  sender_pool.rs
grammers-mtsender/src/net/: mod.rs  mtproxy.rs  tcp.rs
grammers-mtsender/tests/: mtproxy.rs
