[package]
name = "grammers-mtproto"
version = "0.9.0"
authors = ["Lonami Exo <totufals@hotmail.com>"]
license = "MIT OR Apache-2.0"
description = """
An implementation of the Mobile Transport Protocol.
"""
homepage = "https://codeberg.org/Lonami/grammers"
documentation = "https://docs.rs/grammers-mtproto"
repository = "https://codeberg.org/Lonami/grammers"
keywords = ["mtproto", "telegram", "tl"]
categories = ["network-programming"]
edition = "2024"

[dependencies]
base64 = "0.22"
bytes = "1.11.1"
crc32fast = "1.5.0"
flate2 = "1.1.9"
getrandom = "0.4.1"
grammers-crypto = { path = "../grammers-crypto", version = "0.9.0" }
grammers-tl-types = { path = "../grammers-tl-types", version = "0.9.0", features = ["tl-mtproto"] }
hex = "0.4"
hmac = "0.12.1"
log = "0.4.29"
num-bigint = "0.4.6"
rand = "0.8"
sha1 = "0.10.6"
sha2 = "0.10"
subtle = { version = "2.6", optional = true }
tokio = { version = "1.49.0", default-features = false, features = ["net", "io-util", "rt", "macros"] }
x25519-dalek = { version = "3.0.0-pre.6", default-features = false, features = ["static_secrets"] }
aes = { version = "0.8.4", optional = true }
ctr = { version = "0.9.2", optional = true }

[dev-dependencies]
toml = "1.0.3"

[features]
mtproxy = ["subtle", "aes", "ctr"]
